--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "react-pdf",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@vectorworks/vcs-pdf-viewer",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
+    }
+  },
+  "author": "Vectorworks",
+  "private": false,
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
