--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@emotion/styled": "^11.11.0",
     "@vectorworks/vcs-icons": "^1.0.34",
     "@vectorworks/vcs-ui": "^0.1.74",
+    "material-ui-popup-state": "^5.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^7.2.0",
