--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     }
   },
   "author": "Vectorworks",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/Vectorworks"
+  },
   "private": false,
   "version": "0.0.0",
   "scripts": {
@@ -23,18 +26,21 @@
     "vitest": "vitest"
   },
   "dependencies": {
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
     "@vectorworks/vcs-icons": "^1.0.34",
     "@vectorworks/vcs-ui": "^0.1.74",
     "material-ui-popup-state": "^5.0.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-pdf": "^7.2.0",
     "styled-components": "^5.3.11"
   },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^17.0.65",
+    "@types/react-dom": "^17.0.20",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
